# newsroom-bot

./: .gitignore  Cargo.toml  Dockerfile
discord-bot/: Cargo.toml
discord-bot/src/: case_insensitive.rs  command.rs  lib.rs
discord-bot/src/command/: new_release.rs
on-lambda/: Cargo.toml
on-lambda/src/: main.rs
on-tunnel-service-or-exposed-port/: Cargo.toml
on-tunnel-service-or-exposed-port/src/: main.rs
parse-hex-public-key/: Cargo.toml
parse-hex-public-key/src/: lib.rs
schema-org/: Cargo.toml
schema-org/src/: lib.rs
via-axum/: Cargo.toml
via-axum/src/: lib.rs  routes.rs
via-axum/src/routes/: discord.rs
via-axum/src/routes/discord/: interactions.rs
