[workspace]
members = [
    "discord-bot",
    "on-lambda",
    "on-tunnel-service-or-exposed-port",
    "parse-hex-public-key",
    "schema-org",
    "via-axum",
]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
chrono = "0.4.42"
ed25519-compact = "2.1"
hex = "0.4"
iref = "3.2.2"
secrecy = "0.10"
serde = "1.0.219"
serde_json = "1.0.143"
snafu = "0.8"
time = "0.3.44"
tokio = "1"
tracing = "0.1"
