[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
rart = "0.2"
futures = "0.3.31"
secrecy = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
twilight-http = { version = "0.16.0", default-features = false, features = [
    "rustls-aws_lc_rs",
    "rustls-webpki-roots",
    "hickory",
    "decompression",
] }
twilight-model = "0.16"
twilight-util = { version = "0.16.0", features = ["builder"] }
itertools = "0.14.0"
