[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
chrono = { workspace = true }
deranged = "0.5.3"
futures = "0.3.31"
iref = { workspace = true }
itertools = "0.14.0"
nonempty = "0.12.0"
rart = "0.2"
rayon = "1.11.0"
readformat = "1.0.1"
reqwest = { version = "0.12.24", default-features = false, features = [
    "brotli",
    "deflate",
    "gzip",
    "hickory-dns",
    "rustls-tls",
    "zstd",
] }
rspotify = { version = "0.15.1", default-features = false, features = [
    "async-stream",
    "client-reqwest",
    "reqwest-rustls-tls",
] }
schema-org = { path = "../schema-org" }
scraper = "0.24.0"
secrecy = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true, features = ["futures"] }
time = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
twilight-http = { version = "0.16.0", default-features = false, features = [
    "rustls-aws_lc_rs",
    "rustls-webpki-roots",
    "hickory",
    "decompression",
] }
twilight-model = "0.16"
twilight-util = { version = "0.16.0", features = ["builder"] }
uncased = "0.9.10"
