[package]
name = "on-tunnel-service-or-exposed-port"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["http2", "tokio"] }
clap = { version = "4", features = ["derive", "env"] }
secrecy = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"
via-axum = { path = "../via-axum" }
