[package]
name = "schema-org"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
dateparser = "0.2.1"
derive_aliases = "0.4.7"
iref = { workspace = true, features = ["serde"] }
jiff = { version = "0.2.15", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_with = "3.15.1"
snafu = { workspace = true }
