[package]
name = "via-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
discord-bot = { path = "../discord-bot" }
ed25519-compact = { workspace = true }
headers = "0.4.1"
hex = { workspace = true }
secrecy = { workspace = true }
serde = "1.0.219"
serde_json = "1.0.143"
snafu = { workspace = true }
tracing = { workspace = true }
